--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                
         </section>
-            <img src="assets/img/Image.png" alt="Foto de Ana García desarrolando un proyecto">
+            <img class="presentacion__imagen" src="assets/img/Image.png" alt="Foto de Ana García desarrolando un proyecto">
     </main>
     <footer class="footer">
         <p>Desarrollado por Jose Contreras</p>
